practice02, practice03 모듈 추가

--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,7 @@
 		<module>chapter02</module>
 		<module>chapter03</module>
 		<module>pratice01</module>
+		<module>practice02</module>
+		<module>practice03</module>
 	</modules>
 </project>
