practice01 모듈 이름 변

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 	<modules>
 		<module>chapter02</module>
 		<module>chapter03</module>
-		<module>pratice01</module>
+		<module>practice01</module>
 		<module>practice02</module>
 		<module>practice03</module>
 		<module>practice04</module>
