chapter04 모듈 추가

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 	<modules>
 		<module>chapter02</module>
 		<module>chapter03</module>
+		<module>chapter04</module>
 		<module>practice01</module>
 		<module>practice02</module>
 		<module>practice03</module>
